// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendButton should render a non-editing disabled SendButton 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginLeft": 8,
      "opacity": 1,
    }
  }
  testID="send-button"
>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/icons/icon_new_message.png",
      }
    }
    style={
      Array [
        Object {
          "height": 15,
          "width": 15,
        },
        Object {},
      ]
    }
  />
</View>
`;

exports[`SendButton should render a non-editing enabled SendButton 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginLeft": 8,
      "opacity": 1,
    }
  }
  testID="send-button"
>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/icons/icon_new_message.png",
      }
    }
    style={
      Array [
        Object {
          "height": 15,
          "width": 15,
        },
        Object {},
      ]
    }
  />
</View>
`;

exports[`SendButton should render an editing disabled SendButton 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginLeft": 8,
      "opacity": 1,
    }
  }
  testID="send-button"
>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/icons/icon_edit.png",
      }
    }
    style={
      Array [
        Object {
          "height": 15,
          "width": 15,
        },
        Object {},
      ]
    }
  />
</View>
`;

exports[`SendButton should render an editing enabled SendButton 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginLeft": 8,
      "opacity": 1,
    }
  }
  testID="send-button"
>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/icons/icon_edit.png",
      }
    }
    style={
      Array [
        Object {
          "height": 15,
          "width": 15,
        },
        Object {},
      ]
    }
  />
</View>
`;
